Alteracao no nome da classe cliente, ajuste versao lombok, criacao dos controllers e teste das APIs